--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vue/devtools-api": "^7.6.4",
+    "axios": "^1.7.8",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "type-fest": "^4.28.0",
